Fix: Applied new deps on composer and package, created SocialMediaService resource, added new sections/modules to the Service Providers

--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "awcodes/filament-curator": "^3.6",
+        "doctrine/dbal": "^3.8",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/octane": "^2.4",
         "laravel/tinker": "^2.9",
-        "owenvoke/blade-fontawesome": "^2.6"
+        "leandrocfe/filament-apex-charts": "^3.1",
+        "mohamedsabil83/filament-forms-tinyeditor": "^2.3",
+        "owenvoke/blade-fontawesome": "^2.6",
+        "pxlrbt/filament-spotlight": "^1.2",
+        "saade/filament-fullcalendar": "^3.2",
+        "shuvroroy/filament-spatie-laravel-health": "^2.0",
+        "z3d0x/filament-logger": "^0.7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
